overlays/test/http/deployment.yaml
# Copyright Contributors to the Open Cluster Management project

kind: Deployment
apiVersion: apps/v1
metadata:
  name: clusterlifecycle-state-metrics
  namespace: multicluster-engine
spec:
  template:
    spec:
      containers:
      - name: clusterlifecycle-state-metrics
        image: REPLACE_IMAGE
        imagePullPolicy: IfNotPresent
        args:
          - "--http-port=8080"
          - "--http-telemetry-port=8081"
          - "--https-port=8443"
          - "--https-telemetry-port=8444"
          - "--tls-crt-file=/etc/tls/tls.crt"
          - "--tls-key-file=/etc/tls/tls.key"
          - "--hub-type=mce"
        volumeMounts:
        - mountPath: /tmp/coverage
          name: coverage-dir
        - mountPath: /etc/tls
          name: tls-certs
          readOnly: true  
      volumes:
      - name: coverage-dir
        hostPath:
          # directory location on host
          path: /tmp/coverage
          # this field is optional
          type: Directory
      - name: tls-certs
        secret:
          secretName: clusterlifecycle-state-metrics-tls
      - name: certs
        secret:
          secretName: multiclusterhub-operator-pull-secret
