overlays/test/http/service.yaml
# Copyright Contributors to the Open Cluster Management project

apiVersion: v1
kind: Service
metadata:
  name: clusterlifecycle-state-metrics
  namespace: multicluster-engine
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https-metrics
    port: 8443
    targetPort: 8443
  - name: https-telemetry
    port: 8444
    targetPort: 8444
